# knn-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  init.cpp  init.h  main.cpp  main.h  run.sh  types.h
src/: main.cpp  ref.cpp  ref.h  report.cpp  report.h  test.cpp  test.h  test_faiss.cpp  test_faiss.h  test_flann.cpp  test_flann.h  test_kNN_CUDA.cpp  test_kNN_CUDA.h  test_pqt.cpp  test_pqt.h
